# f3rva-content-migration

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/f3rva_content_migration/: __init__.py  cli.py
src/f3rva_content_migration/scripts/: __init__.py  hello_world.py  migrate_html_content.py
src/f3rva_content_migration/utils/: __init__.py
tests/: __init__.py  test_cli.py
